<resources>
    <string name="app_name">DVDLoc_PEYBERNES</string>
    <string name="txtBtnPolicier">Policier</string>
    <string name="txtBtnFiction">Fiction</string>
    <string name="txtBtnDocu">Documentaire</string>
    <string name="txtBtnSerie">Series</string>

    <string name="txtTitreAccueil">Choisissez une catégorie</string>
    <string name="txtMenuRecherche">Rechercher un film</string>
    <string name="txtMenuReserve">Réserver un film</string>
    <string name="txtMenuMagasins">Magasins</string>
    <string name="txtMenuPrésentation">Présentation</string>
    <string name="txtMenuPresContact">Contact</string>
    <string name="txtMenuMenuPresEquipe">Equipe</string>
    <string name="txtMenuPresCroissance">Croissance</string>

    <string name="txtTitreReservation">Reservation</string>
    <string name="txtReservation">Voulez vous réserver le film "Avatar" ?</string>

    <string name="txtListePoliciers">Liste des films policiers</string>
    <string name="txtPoliciers">Titre demandé</string>

    <string name="txtListeFiction">Liste des films de fiction</string>
    <string name="txtListeDocu">Liste des documentaires</string>
    <string name="txtListeSerie">Liste des series</string>

    <string name="txtTitreRecherche">Recherche</string>
    <string name="txtRecherche">Quel film cherchez vous ?</string>
    <string name="txtEditRecherche">Entrez un titre</string>
    <string name="txtBtnOk">Ok</string>

    <string name="txtBtnRetour">Retour</string>
    <string name="txtBtnConfirmer">Confirmer</string>
    <string name="txtBtnAnnuler">Annuler</string>

    <string name="txt_email">Email</string>
    <string name="txt_pswd">Mot de passe</string>
    <string name="txt_ok_login">Connexion</string>
    <string name="txt_ok_register">Inscription</string>
</resources>