<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuRechercher"
        android:title="@string/txtMenuRecherche" />
    <item
        android:id="@+id/menuReserve"
        android:title="@string/txtMenuReserve" />
    <item
        android:id="@+id/menuMagasins"
        android:title="@string/txtMenuMagasins" />
    <item
        android:id="@+id/menuPresentation"
        android:title="@string/txtMenuPrésentation" >
        <menu >
            <item
                android:id="@+id/menuContact"
                android:title="@string/txtMenuPresContact" />
            <item
                android:id="@+id/menuEquipe"
                android:title="@string/txtMenuMenuPresEquipe" />
            <item
                android:id="@+id/menuCroissance"
                android:title="@string/txtMenuPresCroissance" />
        </menu>
    </item>
</menu>