<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitreAccueil"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/btnPolicier"
        android:layout_width="352dp"
        android:layout_height="116dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="21dp"
        android:text="@string/txtBtnPolicier"
        android:textColor="@color/bleu"
        android:textSize="40sp"
        app:backgroundTint="#B8B8B8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnFiction"
        android:layout_width="352dp"
        android:layout_height="116dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="21dp"
        android:text="@string/txtBtnFiction"
        android:textColor="@color/jaune"
        android:textSize="40sp"
        app:backgroundTint="#B8B8B8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPolicier" />

    <Button
        android:id="@+id/btnDocu"
        android:layout_width="352dp"
        android:layout_height="116dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="21dp"
        android:text="@string/txtBtnDocu"
        android:textColor="@color/rouge"
        android:textSize="40sp"
        app:backgroundTint="#B8B8B8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFiction" />

    <Button
        android:id="@+id/btnSerie"
        android:layout_width="352dp"
        android:layout_height="116dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="21dp"
        android:text="@string/txtBtnSerie"
        android:textColor="@color/vert"
        android:textSize="40sp"
        app:backgroundTint="#B8B8B8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDocu" />

</androidx.constraintlayout.widget.ConstraintLayout>